Adding auth and updating readme
