# internal/auth/delivery/request.go
@@ -1,0 +1,15 @@
+package auth_http
+
+type Login struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8"`
+}
+
+type Register struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8"`
+}
+
+type Logout struct {
+	Token string `json:"token" validate:"required"`
+}
